k8s/Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chai-kafe-app
  namespace: chai-kafe
  labels:
    app: chai-kafe-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chai-kafe-app
  template:
    metadata:
      labels:
        app: chai-kafe-app
    spec:
      containers:
        - name: chai-kafe
          image: 561848282182.dkr.ecr.us-east-1.amazonaws.com/chai-kafe-app:latest
          ports:
            - containerPort: 8080
