k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: chai-kafe-app
  namespace: chai-kafe
  labels:
    app: chai-kafe-app
spec:
  replicas: 2
  selector:
    matchLabels:
      app: chai-kafe-app
  template:
    metadata:
      labels:
        app: chai-kafe-app
    spec:
      containers:
        - name: chai-kafe
          image: 561848282182.dkr.ecr.us-east-1.amazonaws.com/chai-kafe-app:6
          ports:
            - containerPort: 8080

          # DB ENV from Kubernetes Secret
          resources:
            requests:
              cpu: "250m"
              memory: "512Mi"
            limits:
              cpu: "750m"
              memory: "1024Mi"

          livenessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 60
            periodSeconds: 10
            timeoutSeconds: 3
            failureThreshold: 3

          readinessProbe:
            httpGet:
              path: /actuator/health
              port: 8080
            initialDelaySeconds: 30
            periodSeconds: 5
            timeoutSeconds: 3
            failureThreshold: 3
