k8s/loadbalancer-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chai-kafe-service
  namespace: chai-kafe
  labels:
    app: chai-kafe-app
spec:
  type: LoadBalancer
  selector:
    app: chai-kafe-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
