k8s/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: chai-kafe-service
  namespace: chai-kafe
spec:
  type: ClusterIP
  selector:
    app: chai-kafe-app
  ports:
    - port: 80
      targetPort: 8080
